# lab1

./: README.md  pyproject.toml
src/: Calculator.py  calculator.py  constants.py  converter_rpn.py  errors.py  evaluator.py  main.py  tokenizer.py
tests/: test_M2.py
